--- a/lessons/06_15March_biopython/bk/Dockerfile_bk1
+++ b/lessons/06_15March_biopython/bk/Dockerfile_bk1
@@ -1,7 +1,6 @@
 FROM ubuntu:20.04
 
-RUN apt-get update && apt-get -y install git htop vim python3 python3-pip clustalw
-
+RUN apt-get update && apt-get -y install git htop vim python3 python3-pip
 
 RUN \
 pip3 install --upgrade pip \
